<resources>
    <string name="app_name">アルコールマネージャー2</string>
    <string name="app_name1">アルコール</string>
    <string name="app_name2">マネージャー2</string>
    <string name="action_settings">Settings</string>
    <string name="UPDATE_FILED">アップデートに失敗しました</string>
    <string name="TEST_FLG">0</string>
    <string name="CREATE_TEST_DATA_FLG">0</string>
    <string name="HTTP_HOST_NAME">almanecloud.com</string>
    <string name="HTTP_GET_API_URL">/alcoholmanager/linkmanager/api/getApplicationApiUrl</string>
    <string name="HTTP_GET_MENU_CONTROL">/alcoholmanager/linkmanager/api/getApplicationMenuControl</string>
    <string name="HTTP_TEST_HOST_NAME1">10.0.2.2:83</string>
    <string name="HTTP_TEST_HOST_NAME2">128.0.3.32</string>
    <string name="HTTP_COMPANY_CHECK">HttpGetAlcoholValueDivServlet</string>
    <string name="HTTP_DRIVER_CHECK">HttpDriverMasterCheckServlet</string>
    <string name="HTTP_CAR_NO_CHECK">HttpCarNoMasterCheckServlet</string>
    <string name="HTTP_WRITE_ALCOHOL_VALUE">"HttpWriteAlcoholResultServlet</string>
    <string name="HTTP_WRITE_DRIVING_REPORT">"HttpWriteDrivingReport</string>
    <string name="HTTP_GET_FREE_TITLE">httpGetFreeTitleServlet</string>
    <string name="HTTP_RESPONSE_OK">OK</string>
    <string name="HTTP_RESPONSE_KEY_NG">KEY_NG</string>
    <string name="HTTP_RESPONSE_DRIVER_NG">DRIVER_NG</string>
    <string name="HTTP_RESPONSE_CAR_NUMBER_NG">CAR_NUMBER_NG</string>
    <string name="HTTP_HEADER_PARAM_KEY_AUTH">Authorization</string>
    <string name="HTTP_PARAM_JSON_DATA">jsonData</string>
    <string name="HTTP_PARAM_COMPANY_CODE">CompanyCode</string>
    <string name="HTTP_PARAM_DRIVER_CODE">DriverCode</string>
    <string name="HTTP_PARAM_CAR_NO">CarNo</string>
    <string name="HTTP_PARAM_LOCATION_NAME">LocationName</string>
    <string name="HTTP_PARAM_LOCATION_LAT">LocationLat</string>
    <string name="HTTP_PARAM_LOCATION_LONG">LocationLong</string>
    <string name="HTTP_PARAM_ALCOHOL_VALUE">AlcoholValue</string>
    <string name="HTTP_PARAM_PHOTO">Photo</string>
    <string name="HTTP_PARAM_INSPECTION_TIME">InspectionTime</string>
    <string name="HTTP_PARAM_BACTRACK_ID">BACtrackId</string>
    <string name="HTTP_PARAM_BACTRACK_USE_COUNT">UseCount</string>
    <string name="HTTP_PARAM_DRIVING_DIV">DrivingDiv</string>
    <string name="HTTP_PARAM_APP_PROG">AppProg</string>
    <string name="HTTP_PARAM_APP_ID">AppId</string>
    <string name="PREF_GLOBAL">pref_global</string>
    <string name="PREF_KEY_FINISH">PREF_KEY_FINISH</string>
    <string name="PREF_KEY_HTTP_URL">PREF_KEY_HTTP_URL</string>
    <string name="PREF_KEY_VERIFY_HOSTNAME">PREF_KEY_VERIFY_HOSTNAME</string>
    <string name="PREF_KEY_MENU_DRIVING_REPORT_ENABLED">PREF_KEY_MENU＿ROLL_CALL_ENABLED</string>
    <string name="PREF_KEY_MENU_SEND_LIST_ENABLED">PREF_KEY_MENU＿SEND_LIST_ENABLED</string>
    <string name="PREF_KEY_MENU_REMINDER_ENABLED">PREF_KEY_MENU＿REMINDER_ENABLED</string>
    <string name="PREF_KEY_AGREEMENT">PREF_KEY_AGREEMENT</string>
    <string name="PREF_KEY_FIRST_CONNECTION">PREF_KEY_FIRST_CONNECTION</string>
    <string name="PREF_KEY_COMPANY">PREF_KEY_COMPANY</string>
    <string name="PREF_KEY_ALCOHOL_VALUE_DIV">PREF_KEY_ALCOHOL_VALUE_DIV</string>
    <string name="PREF_KEY_DRIVING_DIV">PREF_KEY_DRIVING_DIV</string>
    <string name="PREF_KEY_DRIVER">PREF_KEY_DRIVER</string>
    <string name="PREF_KEY_CAR_NO">PREF_KEY_CAR_NO</string>
    <string name="PREF_KEY_ADDRESS">PREF_KEY_ADDRESS</string>
    <string name="PREF_KEY_LAT">PREF_KEY_LAT</string>
    <string name="PREF_KEY_LON">PREF_KEY_LON</string>
    <string name="PREF_KEY_MEASUREMENT">PREF_KEY_MEASUREMENT</string>
    <string name="PREF_KEY_PHOTO">PREF_KEY_PHOTO</string>
    <string name="PREF_KEY_INSPECTION_TIME">PREF_KEY_INSPECTION_TIME</string>
    <string name="PREF_KEY_INSPECTION_YMD">PREF_KEY_INSPECTION_YMD</string>
    <string name="PREF_KEY_INSPECTION_HM">PREF_KEY_INSPECTION_HM</string>
    <string name="PREF_KEY_BACTRACK_ID">PREF_KEY_BACTRACK_ID</string>
    <string name="PREF_KEY_BACTRACK_USE_COUNT">PREF_KEY_BACTRACK_USE_COUNT</string>
    <string name="PREF_KEY_FREE_TITLE1">PREF_KEY_FREE_TITLE1</string>
    <string name="PREF_KEY_FREE_TITLE2">PREF_KEY_FREE_TITLE2</string>
    <string name="PREF_KEY_FREE_TITLE3">PREF_KEY_FREE_TITLE3</string>
    <string name="PREF_KEY_STATUS">PREF_KEY_STATUS</string>
    <string name="PREF_KEY_CONNECTION">PREF_KEY_CONNECTION</string>
    <string name="ALERT_TITLE_INFO">情報</string>
    <string name="ALERT_TITLE_QUESTION">質問</string>
    <string name="ALERT_TITLE_WARNING">警告</string>
    <string name="ALERT_TITLE_ERROR">エラー</string>
    <string name="ALERT_TITLE_CONFIRM">確認</string>
    <string name="ALERT_TITLE_SESSION_ERROR">サーバー接続エラー</string>
    <string name="ALERT_TITLE_INTERNET_ERROR">インターネットに接続していません</string>
    <string name="ALERT_BTN_YES">はい</string>
    <string name="ALERT_BTN_NO">いいえ</string>
    <string name="ALERT_BTN_OK">OK</string>
    <string name="ALERT_BTN_CANCEL">キャンセル</string>
    <string name="BTN_ADD">新規入力</string>
    <string name="BTN_INSERT">追加</string>
    <string name="BTN_BULK_SEND">一括送信</string>
    <string name="BTN_SAVE">保存</string>
    <string name="BTN_START">開始</string>
    <string name="BTN_DECISION">決定</string>
    <string name="BTN_AGREEMENT">利用規約</string>
    <string name="TEXT_AGREE">同意する</string>
    <string name="TEXT_NOT_AGREE">同意しない</string>
    <string name="BTN_MENU_INSPECTION">測定</string>
    <string name="BTN_MENU_DRIVING_REPORT">運転日報</string>
    <string name="BTN_MENU_SEND_LIST">送信一覧</string>
    <string name="BTN_MENU_REMINDER">リマインダー</string>
    <string name="BTN_GPS_CUT">位置情報省略</string>
    <string name="BTN_SEND">送信</string>
    <string name="BTN_FINISH">終了</string>
    <string name="BTN_DETAIL">明細</string>
    <string name="BTN_DELETE">削除</string>
    <string name="BTN_SELECT">選択</string>
    <string name="TEXT_COLON">：</string>
    <string name="TEXT_DUMMY"> </string>
    <string name="TEXT_COMPANY">会社コード</string>
    <string name="TEXT_DRIVING_DIV">乗務区分</string>
    <string name="TEXT_DRIVING_DIV_0">乗務前</string>
    <string name="TEXT_DRIVING_DIV_1">乗務後</string>
    <string name="TEXT_DRIVER">運転者</string>
    <string name="TEXT_CAR_NO">車番</string>
    <string name="TEXT_ADDRESS">住所</string>
    <string name="TEXT_DRIVING_START_YMD">運転開始日付</string>
    <string name="TEXT_DRIVING_START_HM">運転開始時刻</string>
    <string name="TEXT_DRIVING_END_YMD">運転終了日付</string>
    <string name="TEXT_DRIVING_END_HM">運転終了時刻</string>
    <string name="TEXT_DRIVING_START_KM">乗務開始メーター</string>
    <string name="TEXT_DRIVING_END_KM">乗務終了メーター</string>
    <string name="TEXT_REFUELING_STATUS">給油状況</string>
    <string name="TEXT_ABNORMAL_REPORT">異常報告</string>
    <string name="TEXT_INSTRUCTION">連絡事項</string>
    <string name="TEXT_DESTINATION">行先</string>
    <string name="TEXT_DRIVING_START_HM_SHORT">発時刻</string>
    <string name="TEXT_DRIVING_START_KM_SHORT">発メーター</string>
    <string name="TEXT_DRIVING_END_HM_SHORT">着時刻</string>
    <string name="TEXT_DRIVING_END_KM_SHORT">着メーター</string>
    <string name="TEXT_CARGO_WEIGHT">重量/個数</string>
    <string name="TEXT_CARGO_STATUS">積載状況</string>
    <string name="TEXT_NOTE">備考</string>
    <string name="TEXT_DISCONNECTED">切断</string>
    <string name="TEXT_CONNECTING">接続中</string>
    <string name="TEXT_DISCOVERING_SERVICES">サービスのスキャン</string>
    <string name="TEXT_CONNECTED">接続完了!</string>
    <string name="TEXT_FIRMWARE_VERSION">ファームウェアのバージョン: </string>
    <string name="TEXT_USE_COUNT">使用数: </string>
    <string name="TEXT_BATTERY_VOLTAGE">バッテリー電圧: </string>
    <string name="TEXT_TRANSMIT_POWER">電源供給: </string>
    <string name="TEXT_COUNTDOWN">カウントダウン: </string>
    <string name="TEXT_BLOW_NOW">息を吐いてください!</string>
    <string name="TEXT_KEEP_BLOWING">息を吐き続けてください</string>
    <string name="TEXT_ANALYZING">解析中</string>
    <string name="TEXT_ERR_COMPANY_NOT_FOUND">会社が見つかりません</string>
    <string name="TEXT_ERR_DRIVER_NOT_FOUND">運転者が登録されていません</string>
    <string name="TEXT_ERR_CAR_NO_NOT_FOUND">車番が登録されていません</string>
    <string name="TEXT_ERR_CONNECTION_FILED">サーバーに接続できませんでした</string>
    <string name="TEXT_ERR_NO_BREATHALYZERS_FOUND">アルコールマネージャが検出できません</string>
    <string name="TEXT_ERR_BT_NOT_ENABLED">Bluetoothが無効です</string>
    <string name="TEXT_ERR_BLE_NOT_SUPPORTED">Bluetoothをサポートしていません</string>
    <string name="TEXT_ERR_LOCATION_NOT_ENABLED">位置情報が無効です</string>
    <string name="TEXT_ERR_BLOW_ERROR">息の検出に失敗しました</string>
    <string name="TEXT_ERR_START_COUNTDOWN">準備処理に失敗しました</string>
    <string name="TEXT_ERR_CONNECTION_TIMEOUT">接続タイムアウト</string>
    <string name="TEXT_ERR_EXCEPTION">例外エラー</string>
    <string name="TEXT_STATUS">状態</string>
    <string name="TEXT_GPS_SETTING">GPSを有効にしてください</string>
    <string name="TEXT_GPS_WAIT">現在地　未取得</string>
    <string name="TEXT_GPS_ENABLE">GPS有効</string>
    <string name="TEXT_GPS_DISENABLE">GPS無効</string>
    <string name="TEXT_GPS_NETWORK_ENABLE">ネットワークロケーション有効</string>
    <string name="TEXT_GPS_NETWORK_DISENABLE">ネットワークロケーション無効</string>
    <string name="TEXT_GPS_AVAILABLE">を使用できるようになりました</string>
    <string name="TEXT_GPS_OUT_OF_SERVICE">を使用できなくなりました</string>
    <string name="TEXT_BLUETOOTH_DISENABLE">Bluetoothが使用できません</string>
    <string name="TEXT_BLUETOOTH_SETTING">BluetoothをONにしてください</string>
    <string name="TEXT_BLUETOOTH_PERMISSION">Bluetoothの権限がありません</string>
    <string name="TEXT_MEAS_DISCONNECT">切断されました</string>
    <string name="TEXT_MEAS_PREPARATION">準備中</string>
    <string name="TEXT_MEAS_PREPARATION_CAPT">準備が完了したら、\n息を吐いてください。</string>
    <string name="TEXT_RESULT_TITLE">測定結果</string>
    <string name="TEXT_RESULT_TITLE_BLOOD">測定結果(血中)</string>
    <string name="TEXT_RESULT_TITLE_BREATH">測定結果(呼気)</string>
    <string name="TEXT_RESULT_TITLE_BREATH_2">呼気中濃度表示(呼気)</string>
    <string name="TEXT_RESULT_OK">【検査OK】\n本日も安全運転で\nお願いします</string>
    <string name="TEXT_RESULT_WARNING">【警告】\n現状態での運転禁止\n管理者へ報告する事</string>
    <string name="TEXT_SENDING">送信中</string>
    <string name="TEXT_SEND_ERROR">送信できませんでした\n再送信します</string>
    <string name="TEXT_SEND_ERROR_LAST">送信できませんでした。\nアプリを終了し初めからやりなおしてください。または管理者様へお知らせください。</string>
    <string name="TEXT_SEND_FINISH_ERROR">送信失敗</string>
    <string name="TEXT_FINISH1">送信完了</string>
    <string name="TEXT_FINISH_DUPLICATE">送信済みです</string>
    <string name="TEXT_FINISH2">お疲れさまでした</string>
    <string name="TEXT_QUESTION_DELETE">削除しますか？</string>
    <string name="TEXT_QUESTION_SEND">送信しますか？</string>
    <string name="TEXT_INSPECTION_YMD">測定日</string>
    <string name="TEXT_LOCATION_NAME">測定場所</string>
    <string name="TEXT_ALCOHOL_VALUE">測定値</string>
    <string name="TEXT_BACKTRACK_ID">測定機器ID</string>
    <string name="TEXT_USE_NUMBER">使用回数</string>
    <string name="TEXT_SEND_STATUS">送信状態</string>
    <string name="TEXT_SEND_FLG_0">未送信</string>
    <string name="TEXT_SEND_FLG_1">送信NG</string>
    <string name="TEXT_SEND_FLG_2">送信済</string>
    <string name="TEXT_TRANS_ERROR">該当する送信データが見つかりませんでした</string>
    <string name="TEXT_SENDING_ERROR">送信エラー</string>
    <string name="TEXT_QUESTION_CONTINUE">インターネットに接続出来ません\n測定を続けますか？</string>
    <string name="TEXT_REMAINDER_TITLE">設定日時</string>
    <string name="TEXT_REMAINDER_FINISH">リマインダーが設定されました</string>
    <string name="TEXT_ERROR_COMPANY_CODE">会社を入力してください</string>
    <string name="TEXT_ERROR_DRIVER_CODE">運転者を入力してください</string>
    <string name="TEXT_ERROR_DRIVER_CODE_MAX_LENGTH">運転者が最大桁数を超えています</string>
    <string name="TEXT_ERROR_CAR_NUMBER">車番を入力してください</string>
    <string name="TEXT_ERROR_CAR_NUMBER_MAX_LENGTH">車番が最大桁数を超えています</string>
    <string name="TEXT_ERROR_START_YMD">運転開始日付を入力してください</string>
    <string name="TEXT_ERROR_START_YMD_INVALID">運転開始日付が正しくありません</string>
    <string name="TEXT_RESULT_REMAIN_HEADER">アルコールの消化予定時刻は、</string>
    <string name="TEXT_RESULT_REMAIN_VALUE">00:00です。</string>
    <string name="TEXT_RESULT_REMAIN_FOOTER">※あくまで目安です</string>
</resources>