<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/result_textViewSendMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/TEXT_SENDING"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/gold"/>
        <TextView
            android:id="@+id/result_textViewResultMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/TEXT_RESULT_OK"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="30dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#00000000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/result_textViewDrivingDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TEXT_DRIVING_DIV"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="24sp"  />

        <TextView
            android:id="@+id/result_textViewResultTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TEXT_RESULT_TITLE"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="24sp"  />

        <TextView
            android:id="@+id/result_textViewResultValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TEXT_DUMMY"
            android:textColor="@color/cornflowerBlue"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/result_textViewRemainHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/TEXT_RESULT_REMAIN_HEADER" />

        <TextView
            android:id="@+id/result_textViewRemainValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/TEXT_RESULT_REMAIN_VALUE" />

        <TextView
            android:id="@+id/result_textViewRemainFooter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/TEXT_RESULT_REMAIN_FOOTER" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="30dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#00000000" />

    <Button
        android:id="@+id/result_btnFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BTN_FINISH"
        android:textSize="50sp"
        android:visibility="invisible"/>

</LinearLayout>