<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/main_textViewTitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/main_textViewTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name2"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="40sp" />

    </LinearLayout>

    <Button
        android:id="@+id/main_btnDecision"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BTN_START"
        android:textSize="50sp" />

</LinearLayout>