<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/finish_textViewFinish1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TEXT_FINISH1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/finish_textViewFinish2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TEXT_FINISH2"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp" />
        
    </LinearLayout>

    <Button
        android:id="@+id/finish_btnDecision"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BTN_FINISH"
        android:textSize="50sp" />

</LinearLayout>