<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RadioGroup
        android:id="@+id/driving_div_radioGroupDrivingDiv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center" >

        <RadioButton
            android:id="@+id/driving_div_radioGroupDrivingDiv_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TEXT_DRIVING_DIV_0"
            android:textSize="30sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:checked="true" />

        <RadioButton
            android:id="@+id/driving_div_radioGroupDrivingDiv_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TEXT_DRIVING_DIV_1"
            android:textSize="30sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="30dp"/>
    </RadioGroup>

    <Button
        android:id="@+id/driving_div_btnDecision"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BTN_DECISION"
        android:textSize="50sp"/>

</LinearLayout>